# mlops_portfolio

./: .gitignore  README.md
1-gitlab-ci/: .gitlab-ci.yml  .setup_env.yml  README.md  deploy.sh  pyproject.toml  (+1 more)
3-k8s-inference/: README.md  model.onnx  profile_onnx_AlexandrSimonv.json  pyproject.toml
3-k8s-inference/k8s/: inference-simonov.yaml  sa_simonov.yaml  secret_simonov.yaml
3-k8s-inference/utils/: 1type_of_features.py  2convert.py  3zamer.py  4curl.md  5curl-rezult.md
4-monitoring/music_project-main/: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose2.yml  load_test.py  prometheus.yml  pyproject.toml  requirements.txt
4-monitoring/music_project-main/app/: main.py  recommender.py  schemas.py
4-monitoring/music_project-main/grafana/dashboards/: infra_dashbord_basic.json
4-monitoring/music_project-main/grafana/datasources/: prometheus.yml
5-mlops_final_simonov/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
5-mlops_final_simonov/mlops/airflow/: docker-compose.yaml  preprocessing_data.py
5-mlops_final_simonov/mlops/clearml/: finall.py
5-mlops_final_simonov/mlops/deploy/k8s/: deployment.yaml  inference-simonov.yaml  sa_simonov.yaml  secret_simonov.yaml  secret_token.yaml  service.yaml
5-mlops_final_simonov/mlops/grafana/: docker-compose.yaml
5-mlops_final_simonov/mlops/grafana/grafana/config/: dashboards.yml
5-mlops_final_simonov/src/: loaded_models.py  main.py  prepare_features.py  sсhemas.py  train_model.py
5-mlops_final_simonov/tests/: test_health.py  test_predict.py
(+16 files in other folders)
