[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src/services"]

[project]
name = "Taxi_Price_Predictor"
version = "0.0.1"
description = "MLOps проект для работы с CI/CD"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime===1.23.1",
    "packaging==25.0",
    "protobuf==6.32.1",
    "skl2onnx==1.19.1",
]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--tb=short -q"
testpaths = ["tests"]
