[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src/services"]

[project]
name = "Spotify"
version = "0.0.1"
description = "MLOps проект для работы с CI/CD"
requires-python = ">=3.10"
dependencies = [
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--tb=short -q"
testpaths = ["tests"]
